tests/programs/modules/errors/not_found/main.tiny
import "nonexistent.tiny";
print(42);
