tests/programs/modules/errors/not_found/main.expected
Error: cannot open module 'nonexistent.tiny' (line 1)

1 error(s)
